[package]
name = "trade_engine_rust"
version = "0.1.0"
authors = ["Nathan Bruer <thegreatall@gmail.com>"]
publish = false

[lib]
name = "libtradeengine"
path = "src/libtradeengine/lib.rs"
tests = true

[[bin]]
name = "tradeengine"
path = "src/main.rs"

[dependencies]
libtradeengine = {path = "src/libtradeengine"}
rand = "0.3"
